# open-keep

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
config/: workout.json
src/workout_gen/: __init__.py  audio.py  cli.py  config.py  generator.py  tts.py
