[project]
name = "workout-audio-generator"
version = "0.1.0"
description = "Generate workout audio with TTS prompts and background music"
requires-python = ">=3.10"
dependencies = [
    "pydub>=0.25.1",
    "edge-tts>=6.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
workout-gen = "workout_gen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workout_gen"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
